--- a/subprojects/degrees-and-programs/source/static/app/assemble/degrees-and-programs.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/degrees-and-programs.hbs
@@ -3,7 +3,9 @@ title: Degrees and Programs
 template: true
 body-class: "degrees-and-programs"
 layout: degrees-and-programs.hbs
+cascade-build: true
 ---
+<!-- Set cascade-build to false if developing locally -->
 
 <div class="bigMasthead smallRotator" id="container">
     <header>
