--- a/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-results-header.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-results-header.hbs
@@ -1,7 +1,7 @@
 <!-- partial:dap-results-header -->
 <header class="dap-results-header">
 
-	<h2>We think you may be interested in:</h2>
+	<h2 class="results-count">You are seeing all {{title}} Degrees and Programs</h2>
 
 	<ul class="results-views clearfix">
 		<li class="active" data-view="grid-view" aria-label="Click to enable grid view of the results">
