--- a/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-results.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-results.hbs
@@ -3,7 +3,7 @@
 
 	<div class="row">
     	<div class="columns small-12">
-    		{{> dap-results-header }}
+    		{{> dap-results-header this }}
     	</div>
     </div>
 
