Updates ajax-loader path in news feed to be absolute path.

--- a/app/views/widgets/left_column/_news_event_left_col.html
+++ b/app/views/widgets/left_column/_news_event_left_col.html
@@ -31,7 +31,7 @@
         </li>
         <li>
             <div class="news clearfix">
-                <img class="loading" src="../_files/level/img/ajax-loader.gif" alt="Loading news list..."/>
+                <img class="loading" src="/_files/level/img/ajax-loader.gif" alt="Loading news list..."/>
                 <div class="story story1" itemscope="itemscope" itemtype="http://schema.org/Article">
 
                     <div class="date" itemprop="datePublished">
