Adds login container to navbar builder.

--- a/app/views/layouts/omninav.erb
+++ b/app/views/layouts/omninav.erb
@@ -50,7 +50,7 @@
     </header>
 
     <div class="homepage" id="main" role="main">
-      <h1>Omninav Demo</h1>
+      <h1>OmniNav Demo</h1>
       <p>
         This page is intended only to demonstrate the OmniNav navbar at top as build by the
         Omninav library.
