Updated degree types data structure

--- a/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-results.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-results.hbs
@@ -37,8 +37,8 @@
                             <span class="campus">{{{campus.id}}}</span>
 
                             <ul class="degree-types clearfix">
-                                {{#each degreeTypes}}
-                                    <li>{{{title}}}</li>
+                                {{#each degreeTypes.title}}
+                                    <li>{{{this}}}</li>
                                 {{/each}}
                             </ul>
 
