Adds omninav-builder class to distinguish ported version of omninav. Updates stylesheet to not indent off-canvas nav Chapman logo in builder version.

--- a/app/assets/stylesheets/omni_nav/modules/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/modules/omni-nav.scss
@@ -233,6 +233,8 @@ a.cu_nav_button {
 }
 
 
+
+
 /***************************************************
 * SEARCH
 ***************************************************/
@@ -1003,4 +1005,14 @@ a.cu_nav_button {
 
 }
 
+/***************************************************
+* OmniNav Builder Variations
+* This is for versions built by builder for
+* sites other than WWW.
+***************************************************/
 
+#cu_nav.omninav-builder {
+	a.default-logo-cu {
+		text-indent: 0px;
+	}
+}
