--- a/app/views/widgets/left_column/_shared_content_contacts_3.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_3.html
@@ -3,14 +3,15 @@
 	<div class="border"> </div>     
 	<h2>Contact Information</h2>
     
-	<div id="social_follow_us">
+	<!--<div id="social_follow_us">
     	<div class="banner"></div>
         <ul>
             <li class="facebook first"><span class="inactive_state"></span><span class="hover_state"></span><a href="https://www.facebook.com/SchmidCollegeOfScienceTechnologyChapmanUniversity?fref=ts"><span class="hide">facebook</span></a></li>
             <li class="blog"><span class="inactive_state"></span><span class="hover_state"></span><a href="http://blogs.chapman.edu/scst/"><span class="hide">blog</span></a></li>
             <li class="youtube last"><span class="inactive_state"></span><span class="hover_state"></span><a href="https://www.youtube.com/watch?v=PIuSc7mOnzc&amp;list=PLBAF625333A86D39F"><span class="hide">youtube</span></a></li>    
         </ul>
-	</div>
+	</div> 
+    -->
                     
     <div class="editableContent">
         <p>Schmid College of Science &amp; Technology</p> 
@@ -24,14 +25,66 @@
         
         <p>One University Drive
            <br/>Orange, CA 92866
-        </p>
-
-        <h3>Mailing Address</h3>
+        </p>        
         
-        <p>Schmid College of Science &amp; Technology
-           <br/>Chapman University
-           <br/>One University Drive 
-           <br/>Orange, CA 92866
-        </p>
-    </div>    
+        <div class="accordian" style="display:inline;">
+        
+        	<h3>Mailing Address</h3>        
+            <p>Schmid College of Science &amp; Technology
+               <br/>Chapman University
+               <br/>One University Drive 
+               <br/>Orange, CA 92866
+            </p>
+        
+        	<h3>Individual Contact(s)</h3> 
+            <p>
+                        Esther Choi
+                        <br/>Account Manager
+                        <br/><a href="tel:7149976582">(714) 997-6582</a> 
+                        <br/><a href="mailto:echoi@chapman.edu">echoi@chapman.edu</a>                                  
+            </p>
+            <p>
+                        Drew Farrington
+                        <br/>Account Manager
+                        <br/><a href="tel:7142893142">(714) 289-3142</a> 
+                        <br/><a href="mailto:afarring@chapman.edu">afarring@chapman.edu</a>                                  
+            </p>
+            <p>
+                        Carl Minor
+                        <br/>Account Manager
+                        <br/><a href="tel:7146287214">(714) 628-7214</a> 
+                        <br/><a href="mailto:cminor@chapman.edu">cminor@chapman.edu</a>                                  
+            </p>
+            <p>
+                        Gina Madson
+                        <br/>Account Manager
+                        <br/><a href="tel:7147447961">(714) 744-7961</a> 
+                        <br/><a href="mailto:madson@chapman.edu">madson@chapman.edu</a>                                  
+            </p>
+        </div>
+        
+        <h3>Follow Us</h3>
+		<ul class="left-social-icons">
+            <li><a href="#"><span class="icon-facebook"></span></a></li>
+            <li><a href="#"><span class="icon icon-twitter"></span></a></li>    
+            <li><a href="#"><span class="icon icon-instagram"></span></a></li>
+            <li><a href="#"><span class="icon icon-linkedin2"></span></a></li> 
+            <li><a href="#"><span class="icon icon-youtube2"></span></a></li>    
+            <li><a href="#"><span class="icon icon-pinterest"></span></a></li>             
+			<!--
+            <li><a href="#"><span class="icon icon-download2"</span></a></li>             
+                <li><a href="#"><span class="icon icon-checkmark"</span></a></li>
+                <li><a href="#"><span class="icon icon-android"</span></a></li>
+                <li><a href="#"><span class="icon icon-appleinc"</span></a></li>
+                <li><a href="#"><span class="icon icon-mobile"</span></a></li>
+                <li><a href="#"><span class="icon icon-phone2"</span></a></li>
+                <li><a href="#"><span class="icon icon-envelop3"</span></a></li>
+            -->
+            <li><a href="#"><span class="icon icon-vimeo"></span></a></li> 
+            <li><a href="#"><span class="icon icon-snapchat-ghost"></span></a></li>  
+            <li class="last"><a href="#"><span class="icon icon-rss"</span></a></li>           
+        </ul>        
+    </div> 
+    <div class="view-more"><a href="#">VIEW MORE</a></div>     
+      
 </div>
