Adds NAVBAR region to discover template.

--- a/subprojects/discover/cascade/pages/_cascade/discover/templates/Main.html
+++ b/subprojects/discover/cascade/pages/_cascade/discover/templates/Main.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-<title><system-page-title/> | Chapman University</title>
-<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
-<system-page-meta-keywords/>
-<system-page-meta-description/>
-<system-page-meta-author/><system-region name="OG_TAGS"/><!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-<system-region name="HEAD"/><system-region name="GOOGLE_ANALYTICS"/>
-</head>
-<!--[if lt IE 7]>      <body class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <body class="lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <body class="lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <body> <!--<![endif]-->
-<system-region name="BANNER"/>
-<system-region name="RESULTS"/>
-<system-region name="NEXT_UP"/>
-<system-region name="FOOTER"/>
-</body>
+  <head>
+    <meta charset="utf-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <title><system-page-title/> | Chapman University</title>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
+    <system-page-meta-keywords/>
+    <system-page-meta-description/>
+    <system-page-meta-author/><system-region name="OG_TAGS"/>
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <system-region name="HEAD"/><system-region name="GOOGLE_ANALYTICS"/>
+  </head>
+  <!--[if lt IE 7]>      <body class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+  <!--[if IE 7]>         <body class="lt-ie9 lt-ie8"> <![endif]-->
+  <!--[if IE 8]>         <body class="lt-ie9"> <![endif]-->
+  <!--[if gt IE 8]><!-->
+  <body> <!--<![endif]-->
+    <system-region name="NAVBAR"/>
+    <system-region name="BANNER"/>
+    <system-region name="RESULTS"/>
+    <system-region name="NEXT_UP"/>
+    <system-region name="FOOTER"/>
+  </body>
 </html>
