--- a/app/assets/stylesheets/components/icomoon.scss
+++ b/app/assets/stylesheets/components/icomoon.scss
@@ -36,7 +36,7 @@ you can use the generic selector below, but it's slower:
     -webkit-font-smoothing: antialiased;
 }
 
-.icon-menu7:before, .icon-arrow-down2:before, .icon-search:before, .icon-user3:before, .icon-youtube2:before, .icon-rss:before, .icon-vimeo:before, .icon-snapchat-ghost:before, .icon-download2:before, .icon-checkmark:before, .icon-android:before, .icon-appleinc:before, .icon-mobile:before, .icon-phone2:before, .icon-envelop3:before {
+.icon-menu7:before, .icon-arrow-down2:before, .icon-search:before, .icon-user3:before, .icon-youtube2:before, .icon-rss:before, .icon-vimeo:before, .icon-snapchat-ghost:before, .icon-download2:before, .icon-checkmark:before, .icon-android:before, .icon-appleinc:before, .icon-mobile:before, .icon-phone2:before, .icon-envelop3:before, .icon-solid-arrow-up:before, .icon-solid-arrow-down:before {
     font-family: 'icomoon-ultimate';
     speak: none;
     font-style: normal;
@@ -300,6 +300,12 @@ you can use the generic selector below, but it's slower:
 }
 .icon-snapchat-ghost:before {
   content: "\e901";
+}
+.icon-solid-arrow-up:before {
+  content: "\edc7";
+}
+.icon-solid-arrow-down:before {
+  content: "\edc9";
 }
 .icon-download2:before {
   content: "\ec7d";
