--- a/app/views/widgets/left_column/_shared_content_contacts_3.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_3.html
@@ -2,18 +2,8 @@
 <div class="callout-box-widget--left callout">
 	<div class="border"> </div>     
 	<h2>Contact Information</h2>
-    
-	<!--<div id="social_follow_us">
-    	<div class="banner"></div>
-        <ul>
-            <li class="facebook first"><span class="inactive_state"></span><span class="hover_state"></span><a href="https://www.facebook.com/SchmidCollegeOfScienceTechnologyChapmanUniversity?fref=ts"><span class="hide">facebook</span></a></li>
-            <li class="blog"><span class="inactive_state"></span><span class="hover_state"></span><a href="http://blogs.chapman.edu/scst/"><span class="hide">blog</span></a></li>
-            <li class="youtube last"><span class="inactive_state"></span><span class="hover_state"></span><a href="https://www.youtube.com/watch?v=PIuSc7mOnzc&amp;list=PLBAF625333A86D39F"><span class="hide">youtube</span></a></li>    
-        </ul>
-	</div> 
-    -->
                     
-    <div class="editableContent">
+    <div class="contact-widget editableContent">
         <p>Schmid College of Science &amp; Technology</p> 
             
         <p>Main:
@@ -27,7 +17,7 @@
            <br/>Orange, CA 92866
         </p>        
         
-        <div class="accordian" style="display:inline;">
+        <div class="more-content hide-more">
         
         	<h3>Mailing Address</h3>        
             <p>Schmid College of Science &amp; Technology
@@ -65,26 +55,32 @@
         
         <h3>Follow Us</h3>
 		<ul class="left-social-icons">
-            <li><a href="#"><span class="icon-facebook"></span></a></li>
-            <li><a href="#"><span class="icon icon-twitter"></span></a></li>    
-            <li><a href="#"><span class="icon icon-instagram"></span></a></li>
-            <li><a href="#"><span class="icon icon-linkedin2"></span></a></li> 
-            <li><a href="#"><span class="icon icon-youtube2"></span></a></li>    
-            <li><a href="#"><span class="icon icon-pinterest"></span></a></li>             
-			<!--
-            <li><a href="#"><span class="icon icon-download2"</span></a></li>             
-                <li><a href="#"><span class="icon icon-checkmark"</span></a></li>
-                <li><a href="#"><span class="icon icon-android"</span></a></li>
-                <li><a href="#"><span class="icon icon-appleinc"</span></a></li>
-                <li><a href="#"><span class="icon icon-mobile"</span></a></li>
-                <li><a href="#"><span class="icon icon-phone2"</span></a></li>
-                <li><a href="#"><span class="icon icon-envelop3"</span></a></li>
-            -->
-            <li><a href="#"><span class="icon icon-vimeo"></span></a></li> 
-            <li><a href="#"><span class="icon icon-snapchat-ghost"></span></a></li>  
-            <li class="last"><a href="#"><span class="icon icon-rss"</span></a></li>           
-        </ul>        
-    </div> 
-    <div class="view-more"><a href="#">VIEW MORE</a></div>     
+            <li><a href="#" title="Facebook"><span class="icon-facebook"></span><span style="display:none;">Facebook</span></a></li>
+            <li><a href="#" title="Twitter"><span class="icon icon-twitter"></span><span style="display:none;">Twitter</span></a></li>    
+            <li><a href="#" title="Instagram"><span class="icon icon-instagram"></span><span style="display:none;">Instagram</span></a></li>
+            <li><a href="#" title="Linked In"><span class="icon icon-linkedin2"></span><span style="display:none;">Linked In</span></a></li> 
+            <li><a href="#" title="youTube"><span class="icon icon-youtube2"></span><span style="display:none;">youTube</span></a></li>    
+            <li><a href="#" title="Pinterest"><span class="icon icon-pinterest"></span><span style="display:none;">Pinterest</span></a></li>             
+            <li><a href="#" title="Vimeo"><span class="icon icon-vimeo"></span><span style="display:none;">Vimeo</span></a></li> 
+            <li><a href="#" title="Snapchat"><span class="icon icon-snapchat-ghost"></span></a><span style="display:none;">Snapchat</span></li>  
+            <li class="last"><a href="#" title="Blog"><span class="icon icon-rss"></span><span style="display:none;">Blog</span></a></li>           
+        </ul>      
+    	
+	</div> <!-- end contact-widget -->
+    
+    <div class="view-more-button">
+        <a class="view-more show-more"><div class="icon icon-solid-arrow-down"></div><div>View More</div></a>
+        <a class="view-less hide-more"><div class="icon icon-solid-arrow-up"></div><div>View Less</div></a>
+    </div>
       
-</div>
+</div> <!-- end callout-box-widget--left -->
+
+<script type="text/javascript">
+	$(".view-more-button").click(function () {
+		//Note toggleClass removes if class exists on element and adds if missing so can list both and will toggle between show and hide:		
+		$(this).siblings(".contact-widget").toggleClass("show-more").children(".more-content").slideToggle('slow');			
+		$(this).children(".view-more").toggleClass("show-more hide-more").children(".view-more").slideToggle('fast');
+		$(this).children(".view-less").toggleClass("hide-more show-more").children(".view-less").slideToggle('fast');
+	});
+	
+</script>
